feat: complete implementation of threaded replies, file attachments, WebRTC, and DM support